--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
   <nav class="nav">
-    <div class="container">
-      <div class="logo">Vanilla JavaScript Demos</div>
-    </div>
+    <p>Vanilla JavaScript Demos</p>
   </nav>
-  <main class="main">
-    <div class="container">
-      <div class="box" onclick="window.open('./flexbox', '_blank')">Flexbox Crash Course</div>
-    </div>
+  <main class="grid-container">
+      <div class="box" onclick="window.open('./flexbox', '_blank')">
+        <p>Flexbox Crash Course</p>
+      </div>
+      <div class="box" onclick="window.open('./css_grid', '_blank')">
+        <p>CSS Grid</p>
+      </div>
   </main>
 </body>
 </html>
