display css grid demos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
       <div class="box" onclick="window.open('./css_grid', '_blank')">
         <p>CSS Grid</p>
       </div>
+      <div class="divider">
+        <p>CSS Grid</p>
+      </div>
+      <div class="box" onclick="window.open('./net_ninja_css_grid/1_basics', '_blank')">
+        <p>CSS Grid Basics</p>
+      </div>
+      <div class="box" onclick="window.open('./net_ninja_css_grid/2_multi-column_layout', '_blank')">
+        <p>Multi-Column Layout</p>
+      </div>
+      <div class="box" onclick="window.open('./net_ninja_css_grid/3_the_holy_grail_grid', '_blank')">
+        <p>Holy Grail Grid</p>
+      </div>
+      <div class="box" onclick="window.open('./net_ninja_css_grid/4_masonry_style_layout', '_blank')">
+        <p>Masonry Layout</p>
+      </div>
   </main>
 </body>
 </html>
