add favicon & iframe preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="./style.css">
   <title>Vanilla JavaScript Demos</title>
 </head>
@@ -12,25 +13,31 @@
     <p>Vanilla JavaScript Demos</p>
   </nav>
   <main class="grid-container">
-      <div class="box" onclick="window.open('./flexbox', '_blank')">
+      <div class="box" onclick="window.open('flexbox', '_blank')">
+        <iframe src="flexbox" title="description"></iframe>
         <p>Flexbox Crash Course</p>
       </div>
-      <div class="box" onclick="window.open('./css_grid', '_blank')">
+      <div class="box" onclick="window.open('css_grid', '_blank')">
+        <iframe src="css_grid" title="description"></iframe>
         <p>CSS Grid</p>
       </div>
       <div class="divider">
         <p>CSS Grid</p>
       </div>
-      <div class="box" onclick="window.open('./net_ninja_css_grid/1_basics', '_blank')">
+      <div class="box" onclick="window.open('net_ninja_css_grid/1_basics', '_blank')">
+        <iframe src="net_ninja_css_grid/1_basics" title="description"></iframe>
         <p>CSS Grid Basics</p>
       </div>
-      <div class="box" onclick="window.open('./net_ninja_css_grid/2_multi-column_layout', '_blank')">
+      <div class="box" onclick="window.open('net_ninja_css_grid/2_multi-column_layout', '_blank')">
+        <iframe src="net_ninja_css_grid/2_multi-column_layout" title="description"></iframe>
         <p>Multi-Column Layout</p>
       </div>
-      <div class="box" onclick="window.open('./net_ninja_css_grid/3_the_holy_grail_grid', '_blank')">
+      <div class="box" onclick="window.open('net_ninja_css_grid/3_the_holy_grail_grid', '_blank')">
+        <iframe src="net_ninja_css_grid/3_the_holy_grail_grid" title="description"></iframe>
         <p>Holy Grail Grid</p>
       </div>
-      <div class="box" onclick="window.open('./net_ninja_css_grid/4_masonry_style_layout', '_blank')">
+      <div class="box" onclick="window.open('net_ninja_css_grid/4_masonry_style_layout', '_blank')">
+        <iframe src="net_ninja_css_grid/4_masonry_style_layout" title="description"></iframe>
         <p>Masonry Layout</p>
       </div>
   </main>
