--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>CSS Grid</p>
       </div>
       <div class="divider">
-        <p>CSS Grid</p>
+        <p>CSS Grid (WIP)</p>
       </div>
       <div class="box" onclick="window.open('net_ninja_css_grid/1_basics', '_blank')">
         <iframe src="net_ninja_css_grid/1_basics" title="description"></iframe>
