add css grid portfolio

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <iframe src="net_ninja_css_grid/4_masonry" title="description"></iframe>
         <p>Masonry Layout</p>
       </div>
+      <div class="box" onclick="window.open('net_ninja_css_grid/5_portfolio', '_blank')">
+        <iframe src="net_ninja_css_grid/5_portfolio" title="description"></iframe>
+        <p>Portfolio</p>
+      </div>
   </main>
 </body>
 </html>
