--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="./style.css">
-  <title>Vanilla JavaScript Demos</title>
+  <title>Vanilla Web Demos</title>
 </head>
 <body>
   <nav class="nav">
-    <p>Vanilla JavaScript Demos</p>
+    <p>Vanilla Web Demos</p>
   </nav>
   <main class="grid-container">
       <div class="box" onclick="window.open('flexbox', '_blank')">
