--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
   </nav>
   <main class="grid-container">
       <div class="box" onclick="window.open('flexbox', '_blank')">
-        <iframe src="flexbox" title="description"></iframe>
+        <!-- <iframe src="flexbox" title="description"></iframe> -->
         <p>Flexbox Crash Course</p>
       </div>
       <div class="box" onclick="window.open('css_grid', '_blank')">
-        <iframe src="css_grid" title="description"></iframe>
+        <!-- <iframe src="css_grid" title="description"></iframe> -->
         <p>CSS Grid</p>
       </div>
       <div class="divider">
         <p>CSS Grid (WIP)</p>
       </div>
       <div class="box" onclick="window.open('net_ninja_css_grid/1_basics', '_blank')">
-        <iframe src="net_ninja_css_grid/1_basics" title="description"></iframe>
+        <!-- <iframe src="net_ninja_css_grid/1_basics" title="description"></iframe> -->
         <p>CSS Grid Basics</p>
       </div>
       <div class="box" onclick="window.open('net_ninja_css_grid/2_multi_column', '_blank')">
-        <iframe src="net_ninja_css_grid/2_multi_column" title="description"></iframe>
+        <!-- <iframe src="net_ninja_css_grid/2_multi_column" title="description"></iframe> -->
         <p>Multi-Column Layout</p>
       </div>
       <div class="box" onclick="window.open('net_ninja_css_grid/3_holy_grail', '_blank')">
-        <iframe src="net_ninja_css_grid/3_holy_grail" title="description"></iframe>
+        <!-- <iframe src="net_ninja_css_grid/3_holy_grail" title="description"></iframe> -->
         <p>Holy Grail Grid</p>
       </div>
       <div class="box" onclick="window.open('net_ninja_css_grid/4_masonry', '_blank')">
-        <iframe src="net_ninja_css_grid/4_masonry" title="description"></iframe>
+        <!-- <iframe src="net_ninja_css_grid/4_masonry" title="description"></iframe> -->
         <p>Masonry Layout</p>
       </div>
       <div class="box" onclick="window.open('net_ninja_css_grid/5_portfolio', '_blank')">
-        <iframe src="net_ninja_css_grid/5_portfolio" title="description"></iframe>
+        <!-- <iframe src="net_ninja_css_grid/5_portfolio" title="description"></iframe> -->
         <p>Portfolio</p>
       </div>
   </main>
